fixing text alignment on statue section

--- a/client/src/pages/About/AboutPage.scss
+++ b/client/src/pages/About/AboutPage.scss
@@ -49,6 +49,18 @@
       }
     }
   }
+
+  #statuesSect 
+  .about-sect-content {
+    p {
+      width: 100%;
+    }
+
+    .statue-sect-extra {
+      // margin: 0 auto;
+      text-align: center; 
+    }
+  }
 }
 
 .about-intro-sect-content,
